miniextendr-macros/tests/ui/impl_unknown_option.stderr
error: unknown impl block option `bogus`; expected one of: env, r6, s3, s4, s7, vctrs (class system), class = "..." (R class name), label = "..." (multi-impl label), strict (strict type conversion)
 --> tests/ui/impl_unknown_option.rs:7:20
  |
7 | #[miniextendr(env, bogus = "x")]
  |                    ^^^^^
